load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "py_requirements",
    src = "py_requirements.in",
    extra_args = [
        "--strip-extras",  # becoming the default in piptools compile v8.0.0
    ],
    requirements_txt = "py_requirements_lock.txt",
)
