"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.4")
bazel_dep(name = "rules_python", version = "1.8.4")

# Python setup
PY_VERSION = "3.14.2"

# coverage: https://rules-python.readthedocs.io/en/latest/coverage.html
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = PY_VERSION)
python.toolchain(python_version = PY_VERSION)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = PY_VERSION,
    requirements_lock = "//:py_requirements_lock.txt",
)
use_repo(pip, "pypi")

# TODO: aspect_rules_lint for ruff (and/or other linters?)
# TODO: mypy
